...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/toolbar_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:visibility="invisible">

...
                    android:layout_height="wrap_content"
                    android:src="@drawable/shop_logo" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/toolbar_checkout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:visibility="invisible">

...
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <ListView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/items_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/gray_mid_light"
            android:dividerHeight="0.2dp"
            android:fadeScrollbars="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
...
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cart_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/border_confirm_cart"
            android:gravity="center"
...
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cart_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/border_cancel_cart"
...
