...

    <!-- GENERAL -->
    <string name="get_items_error">Is not possible get the items, check if internet is enable or the url is correct.</string>
    <string name="cart_empty_alert">You have to add products to your cart</string>
    <string name="settings_cards_empty_alert">You must select at least one card</string>
    <string name="loading">Loading, please wait</string>
    <string name="ok">Ok</string>
    <string name="confirm">I CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Continue Shopping</string>
    <string name="masterpass">masterpass</string>
    <!-- GENERAL -->

    <!-- SETTINGS -->
    <string name="settings_list_title">Settings / Configuration</string>
...
    <!-- CART -->

    <!-- CART CONFIRMATION -->
    <string name="cart_confirmation_text_title">PLEASE CONFIRM YOUR TRANSACTION</string>
    <string name="cart_confirmation_text_sub">Order Nº</string>
    <string name="cart_confirmation_pay_with">Pay with</string>
    <string name="cart_confirmation_ship_to">SHIP TO</string>
    <string name="cart_confirmation_shipping_method">SHIPPING METHOD</string>
    <string name="cart_confirmation_shipping_method_default">World Postal Service (WOPS)</string>
    <!-- CART CONFIRMATION -->

    <!-- CART CONFIRMATION EXPRESS -->
    <string name="cart_confirmation_express_text_title">My Cards</string>
...
