...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_cell_remove"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/subtract_item_icon"/>

            <TextView
...
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="999"/>

            <ImageView
                android:id="@+id/item_cell_add"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/add_item_icon"/>

        </LinearLayout>
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:gravity="center">

            <ImageView
                android:id="@+id/item_cell_remove_all"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/remove_item_icon"/>
...
